Fixing alignment.

--- a/platform/components/input/_checkbox.scss
+++ b/platform/components/input/_checkbox.scss
@@ -81,7 +81,7 @@ $transition-duration: 0.2s;
       opacity: 0;
       border-left: $thickness solid $color;
       border-bottom: $thickness solid $color;
-      @include transform(translateY(-30%) rotate(-45deg));
+      @include transform(translateY(-20%) rotate(-45deg));
       @include transition(all $transition-duration);
     }
   }
